--- a/index.html
+++ b/index.html
@@ -241,44 +241,45 @@
   <!-- End Features -->
     
   <section class="container padding-tb-30">
-      <!-- Events -->
-      <div class="col-md-3 padding-right-60">
-        <div class="section-heading">
-          <h2>Events</h2>
-        </div>
-        <img src="assets/img/dealer-days-2015.jpg" class="img-responsive"/>
-        <div class="caption">
-        <h4><a href="#">2015 Dealer Days</a></h4>
-        <p>Join Authorized Waterblast Dealers at StoneAge headquarters for two days of training, demonstrations, and discussions.</p>
-        </div>
+    <!-- Events -->
+    <div class="col-md-3 padding-right-60">
+      <div class="section-heading">
+        <h2>Events</h2>
       </div>
-      <!-- End Events --> 
-      <!-- News -->
-      <div class="col-md-9">
-        <div class="section-heading">
-          <h2>Latest News</h2>
-        </div>
-        <ul class="home-news list-unstyled">
-          <li>
-            <h4><a href="http://trendmag.trendoffset.com/publication/?i=277555&p=68" target="_blank">Refractory removal by high-pressure waterjet
+      <a href="http://wwettshow.com/" target="_blank"><img src="http://www.stoneagetools.com/images/upcoming_events_wwett2016.jpg" class="img-responsive"/></a>
+      <div class="caption">
+      <h4><a href="http://wwettshow.com/" target="_blank">2016 WWETT Show</a></h4>
+      <p>The world’s largest annual trade show for environmental service professionals, the WWETT Show offers the latest products, technologies, and knowledge related to the water, wastewater and environmental service industry.</p>
+      </div>
+    </div>
+    <!-- End Events --> 
+    <!-- News -->
+    <div class="col-md-9">
+      <div class="section-heading">
+        <h2>Latest News</h2>
+      </div>
+      <ul class="home-news list-unstyled">
+        <li>
+          <h4><a href="http://trendmag.trendoffset.com/publication/?i=277555&p=68" target="_blank">Refractory removal by high-pressure waterjet
 </a></h4>
-            <p>The application of waterjettechnology to refractory applications yields highly effective results.<br>
+          <p>The application of waterjettechnology to refractory applications yields highly effective results.<br>
 <small><i class="fa fa-newspaper-o"></i> BIC Magazine, November 2015</small></p>
-          </li>
-          <li>
-            <h4><a href="http://trendmag.trendoffset.com/publication/?i=277555&p=68" target="_blank">Refractory removal by high-pressure waterjet
+        </li>
+        <li>
+          <h4><a href="http://trendmag.trendoffset.com/publication/?i=277555&p=68" target="_blank">Refractory removal by high-pressure waterjet
 </a></h4>
-            <p>The application of waterjettechnology to refractory applications yields highly effective results.<br>
+          <p>The application of waterjettechnology to refractory applications yields highly effective results.<br>
 <small><i class="fa fa-newspaper-o"></i> BIC Magazine, November 2015</small></p>
-          </li>
-          <li>
-            <h4><a href="http://trendmag.trendoffset.com/publication/?i=277555&p=68" target="_blank">Refractory removal by high-pressure waterjet
+        </li>
+        <li>
+          <h4><a href="http://trendmag.trendoffset.com/publication/?i=277555&p=68" target="_blank">Refractory removal by high-pressure waterjet
 </a></h4>
-            <p>The application of waterjettechnology to refractory applications yields highly effective results.<br>
+          <p>The application of waterjettechnology to refractory applications yields highly effective results.<br>
 <small><i class="fa fa-newspaper-o"></i> BIC Magazine, November 2015</small></p>
-          </li>
-        </ul>
-      </div><!-- End News --> 
+        </li>
+      </ul>
+    </div>
+    <!-- End News --> 
   </section>
       
   <!-- Testimonials -->
