--- a/stoneage-patents.html
+++ b/stoneage-patents.html
@@ -76,139 +76,151 @@
   </div>
   
   <section class="container padding-tb-30">
-    <span class="counter pull-right"></span>
+    <div class="row">
+      <div class="col-sm-9 margin-bottom-30">
+        <h1 class="thin grey spaced"><em>StoneAge holds more than 60 original patents excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est.</em></h1>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-3 pull-right info-table-filter">
+        <div class="input-group"> 
+          <span class="input-group-addon">Filter:</span>
+          <input id="filter" type="text" class="form-control">
+        </div>
+      </div>
+    </div>
     <table class="table info-table table-striped table-bordered">
       <thead>
         <tr>
-          <th>Tool Model</th>
           <th>US Patent Number</th>
+          <th>Tool Model</th>
           <th>Description</th>
         </tr>
       </thead>
-      <tbody>
+      <tbody class="searchable">
         <tr>
-          <td scope="row">BA-H6, BC, BJ-20/40K, GO-40K</td>
           <td>6,059,202</td>
+          <td>BA-H6, BC, BJ-20/40K, GO-40K</td>
           <td>Rotary coupling with slip seal holder</td>
         </tr>
         <tr>
-          <td scope="row">BA-H6, WS, WT</td>
           <td>5,964,414</td>
+          <td>BA-H6, WS, WT</td>
           <td>Rotary nozzle with viscous retarder</td>
         </tr>
         <tr>
-          <td scope="row">BC, SC, GO</td>
           <td>5,909,848</td>
+          <td>BC, SC, GO</td>
           <td>Rotary nozzle with coil spring retarder</td>
         </tr>
         <tr>
-          <td>BC-40K, GO-40K</td>
           <td>8,573,599</td>
+          <td>BC-40K, GO-40K</td>
           <td>Unitary slip seal cartridge</td>
         </tr>
         <tr>
-          <td>BN</td>
           <td>D 617,870</td>
+          <td>BN</td>
           <td>Rotary nozzle design</td>
         </tr>
         <tr>
-          <td>BN</td>
           <td>D 650,887</td>
-          <td>Rotary nozzle design</td>
-        </tr>
-        <tr>
-          <td>BN, WV-1/4, 2" Badger, SPFR, BT</td>
-          <td>8,220,724</td>
-          <td>Rotary nozzle with balanced fluid bearings</td>
-        </tr>
-        <tr>
           <td>BN</td>
-          <td>8,434,696</td>
-          <td>Rotary nozzle with balanced fluid bearings</td>
-        </tr>
-        <tr>
-          <td>BN, WV-1/4, 2" Badger, SPFR, BT</td>
-          <td>8,006,920</td>
-          <td>Rotary nozzle with balanced fluid bearings</td>
-        </tr>
-        <tr>
-          <td>BN, WV-1/4, 2" Badger, SPFR, BT</td>
-          <td>7,635,096</td>
-          <td>Rotary nozzle with balanced fluid bearings</td>
-        </tr>
-        <tr>
-          <td>BT</td>
-          <td>D 724,695</td>
           <td>Rotary nozzle design</td>
         </tr>
         <tr>
-          <td>CST</td>
+          <td>8,220,724</td>
+          <td>BN, WV-1/4, 2" Badger, SPFR, BT</td>
+          <td>Rotary nozzle with balanced fluid bearings</td>
+        </tr>
+        <tr>
+          <td>8,434,696</td>
+          <td>BN</td>
+          <td>Rotary nozzle with balanced fluid bearings</td>
+        </tr>
+        <tr>
+          <td>8,006,920</td>
+          <td>BN, WV-1/4, 2" Badger, SPFR, BT</td>
+          <td>Rotary nozzle with balanced fluid bearings</td>
+        </tr>
+        <tr>
+          <td>7,635,096</td>
+          <td>BN, WV-1/4, 2" Badger, SPFR, BT</td>
+          <td>Rotary nozzle with balanced fluid bearings</td>
+        </tr>
+        <tr>
+          <td>D 724,695</td>
+          <td>BT</td>
+          <td>Rotary nozzle design</td>
+        </tr>
+        <tr>
           <td>6,085,994</td>
+          <td>CST</td>
           <td>Cable supported rotary nozzle</td>
         </tr>
         <tr>
-          <td>HC, CY</td>
           <td>5,947,387</td>
+          <td>HC, CY</td>
           <td>Adjustable 3-D rotary nozzle</td>
         </tr>
         <tr>
-          <td>Scorpion</td>
           <td>8,505,845</td>
+          <td>Scorpion</td>
           <td>System and method for storing, rotating, and feeding a high pressure hose</td>
         </tr>
         <tr>
-          <td>Scorpion</td>
           <td>9,016,613</td>
+          <td>Scorpion</td>
           <td>System for rotating and feeding high pressure hose</td>
         </tr>
         <tr>
-          <td>SPD</td>
           <td>Pending</td>
+          <td>SPD</td>
           <td>System for propelling coil clad hose</td>
         </tr>
         <tr>
-          <td>SPFR</td>
           <td>9,067,220</td>
+          <td>SPFR</td>
           <td>Rotary nozzle design</td>
         </tr>
         <tr>
-          <td>SPFR</td>
           <td>8,544,768</td>
+          <td>SPFR</td>
           <td>Self regulating fluid bearing high pressure rotary nozzle</td>
         </tr>
         <tr>
-          <td>SRT</td>
           <td>8,720,811</td>
+          <td>SRT</td>
           <td>Apparatus for storing and dispensing pressure hose</td>
         </tr>
         <tr>
-          <td>2" Badger</td>
           <td>D 622,810</td>
+          <td>2" Badger</td>
           <td>Rotary nozzle design</td>
         </tr>
         <tr>
-          <td>2" Badger</td>
           <td>D 626,624</td>
+          <td>2" Badger</td>
           <td>Rotary nozzle design</td>
         </tr>
         <tr>
-          <td>2" Badger</td>
           <td>D 631,131</td>
+          <td>2" Badger</td>
           <td>Rotary nozzle design</td>
         </tr>
         <tr>
-          <td>2" Badger</td>
           <td>D 617,871</td>
-          <td>Rotary nozzle design</td>
-        </tr>
-        <tr>
           <td>2" Badger</td>
-          <td>D 639,906</td>
           <td>Rotary nozzle design</td>
         </tr>
         <tr>
-          <td>WU (Discontinued)</td>
+          <td>D 639,906</td>
+          <td>2" Badger</td>
+          <td>Rotary nozzle design</td>
+        </tr>
+        <tr>
           <td>D 638,912</td>
+          <td>WU (Discontinued)</td>
           <td>Rotary nozzle design</td>
         </tr>
       </tbody>
