--- a/dowhhole-tools.html
+++ b/dowhhole-tools.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="assets/css/main.css">
   <link rel="stylesheet" href="assets/css/media.css">
 </head>
-<body id="top" class="wb landing">
+<body id="top" class="sw landing">
   
   <nav class="navbar navbar-default navbar-fixed-top">
     <!-- Utilities Nav -->
@@ -68,41 +68,21 @@
       </div>
     </div>
   </nav>
-
-  <!-- Big WB nav -->
-  <div class="row landing-nav">
-    <div class="container">
-      <div class="col-sm-6 landing-nav-btn automated">
-        <a href="#"><i class="fa fa-automobile"></i>
-          <h2>Automated</h2>
-          <h5>Waterblast equipment and systems</h5>
-        </a>
-      </div>
-      <div class="col-sm-6 landing-nav-btn rotary">
-        <a href="#rotary">
-          <i class="fa fa-bicycle"></i>
-          <h2>Rotary</h2>
-          <h5>Waterblast tools and accessories</h5>
-        </a>
-      </div>
-    </div>
-  </div>
-  <!-- End Big WB nav -->
   
-  <!-- Automated Equip -->
-  <section class="header wb-automated">
+  <section class="spincat header">
     <div class="row bg-lt-grey margin-bottom-30">
-      <div class="col-sm-6 col-sm-push-6 heading-img">
-        <img src="assets/img/striker-big.jpg" class="img-responsive" alt="Striker Remote Shotgunning System for Hydroblasting"/>
+      <div class="col-sm-12 heading-img">
+        <img src="assets/img/spincat_family.jpg" class="img-responsive" alt="Striker Remote Shotgunning System for Hydroblasting"/>
       </div>
-      <div class="col-sm-6 col-sm-pull-6 heading">
-        <h1>Automated Waterblast Equipment and Systems</h1>
+      <div class="col-sm-12 heading">
+        <h1>SpinCat</h1>
+        <h3>Downhole Tools for Coil Tubing</h3>
       </div>
     </div>
     
-    <!-- Automated Product List -->
     <div id="automated" class="row">
       <div class="container padding-tb-30">
+        <p class="width-80 description margin-bottom-30"><span class="bold">The Spincat family of tools provide simple, self-rotating solution for downhole coil tubing units.</span> The viscous fluid governor controls rotation speed tomaximize jet power delivered to the tubing walls. By using only a few rotating jets, each jet is bigger, with hard-hitting power. The replaceable jets are efficient and clean recesses and irregular surfaces without damaging the well pipe.</p>
         <!-- Row 1 -->
         <div class="row">
           <div class="col-sm-4 product-list">
@@ -184,7 +164,7 @@
   <!-- End Automated Equip -->
   
   <!-- Rotary Tools -->
-  <section id="rotary" class="wb-rotary header">
+  <section id="rotary" class="wb-rotary">
     <div class="row bg-lt-grey margin-bottom-30">
       <div class="col-sm-6 heading-img">
         <img src="assets/img/banshee-big.jpg" class="img-responsive" alt="Striker Remote Shotgunning System for Hydroblasting"/>
