--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@ The products we purchase are of the highest specification from a technical, qual
       </div>
       <div class="col-md-1">
         <a href="#top" title="To Top">
-          <span class="glyphicon glyphicon-chevron-up"></span>
+          <i class="fa fa-caret-up"></i>
         </a>
       </div>
     </div>
