--- a/waterblast-automation/autobox-abx-2l.html
+++ b/waterblast-automation/autobox-abx-2l.html
@@ -258,7 +258,7 @@ or plastic to withstand corrosive environments</li>
           </div><!-- end tab -->
         </div><!-- end accordion -->
         
-        <a href="#" class="btn btn-lg btn-block contact" role="button">Contact Us for Availability</a>
+        <a href="../contact.html" class="btn btn-lg btn-block contact" role="button">Contact Us for Availability</a>
         
     </div>
     <!-- End Product Info -->
