--- a/contact.html
+++ b/contact.html
@@ -103,17 +103,17 @@
                 <h2><i class="fa fa-envelope-o"></i><br/>Email Us</h2>
                 <form method="post" action="contact.php" name="contactform" id="contactform">
                   <fieldset>
-                    <input name="name" type="text" id="name" size="30" placeholder="Name">
+                    <input name="name" type="text" id="name" class="form-control" size="30" placeholder="Name">
                     <br>
-                    <input name=company type="text" id="company" size="30" placeholder="Company">
+                    <input name=company type="text" id="company" class="form-control" size="30" placeholder="Company">
                     <br>
-                    <input name="email" type="text" id="email" size="30" placeholder="Email">
+                    <input name="email" type="text" id="email" class="form-control" size="30" placeholder="Email">
                     <br>
-                    <input name="phone" type="text" id="phone" size="30" placeholder="Phone">
+                    <input name="phone" type="text" id="phone" class="form-control" size="30" placeholder="Phone">
                     <br>
                   </fieldset>
                   <fieldset>
-                    <textarea name="comments" cols="40" rows="20" id="comments" placeholder="Message"></textarea>
+                    <textarea name="comments" cols="40" rows="20" id="comments" class="form-control" placeholder="Message"></textarea>
                   </fieldset>
                   <fieldset>
                     <button type="submit" class="btn btn-lg btn-block" id="submit" value="Submit">Send Message</button>
