--- a/contact.html
+++ b/contact.html
@@ -61,8 +61,8 @@
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="waterblast-tools-automated-equipment.html">Waterblast Tools &amp;<br/>Equipment</a></li>
-            <li><a href="#services">Sewer Jetting &amp;<br/>Hydro-X Nozzles</a></li>
-            <li><a href="#portfolio">Downhole<br/>Wash Tools</a></li>
+            <li><a href="sewer-tools.html">Sewer Jetting &amp;<br/>Hydro-X Nozzles</a></li>
+            <li><a href="downhole-tools.html">Downhole<br/>Wash Tools</a></li>
           </ul>
         </div>
       </div>
