--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="waterblast-tools-automated-equipment.html">Waterblast Tools &amp;<br/>Equipment</a></li>
-            <li><a href="#services">Sewer Jetting &amp;<br/>Hydro-X Nozzles</a></li>
-            <li><a href="#portfolio">Downhole<br/>Wash Tools</a></li>
+            <li><a href="sewer-tools.html">Sewer Jetting &amp;<br/>Hydro-X Nozzles</a></li>
+            <li><a href="downhole-tools.html">Downhole<br/>Wash Tools</a></li>
           </ul>
         </div>
       </div>
@@ -161,7 +161,7 @@
               <img class="img-thumbnail" src="assets/img/thumb/striker.jpg" alt="">
               <a class="btn" href="#">read more +</a>
               <div class="caption">
-                <h4><a href="#">Striker SKR-100</a></h4>
+                <h4><a href="waterblast-automation/striker-remote-shotgunning.html">Striker SKR-100</a></h4>
                 <p>The industry's first portable remote shotgunning system</p>
               </div>
             </div>
@@ -171,7 +171,7 @@
               <img class="img-thumbnail" src="assets/img/thumb/abx-2l.jpg" alt="">
               <a class="btn" href="#">read more +</a>
               <div class="caption">
-                <h4><a href="#">AutoBox ABX-2L</a></h4>
+                <h4><a href="waterblast-automation/autobox-abx-2l.html">AutoBox ABX-2L</a></h4>
                 <p>Automated flex-lancing of heat exchanger tubes</p>
               </div>
             </div>
@@ -260,9 +260,9 @@
       </div>
       <ul class="home-news list-unstyled">
         <li>
-          <h4><a href="http://trendmag.trendoffset.com/publication/?i=277555&p=68" target="_blank">Refractory removal by high-pressure waterjet
+          <h4><a href="http://trendmag.trendoffset.com/publication/?i=277555&p=68" target="_blank">StoneAge welcomes new Regional Sales Manager
 </a></h4>
-          <p>The application of waterjettechnology to refractory applications yields highly effective results.<br>
+          <p>Bill O'Briant joins the team heading up sales and rentals in StoneAge's new Houston center.<br>
 <small><i class="fa fa-newspaper-o"></i> BIC Magazine, November 2015</small></p>
         </li>
         <li>
