--- a/waterblast-automation/striker-remote-shotgunning.html
+++ b/waterblast-automation/striker-remote-shotgunning.html
@@ -64,8 +64,8 @@
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="../waterblast-tools-automated-equipment.html">Waterblast Tools &amp;<br/>Equipment</a></li>
-            <li><a href="#services">Sewer Jetting &amp;<br/>Hydro-X Nozzles</a></li>
-            <li><a href="#portfolio">Downhole<br/>Wash Tools</a></li>
+            <li><a href="../sewer-tools.html">Sewer Jetting &amp;<br/>Hydro-X Nozzles</a></li>
+            <li><a href="../downhole-tools.html">Downhole<br/>Wash Tools</a></li>
           </ul>
         </div>
       </div>
@@ -390,7 +390,7 @@ mounting flexibility.</p>
   <div class="fluid-container copyright">
     <div class="container">
       <div class="col-md-11">
-        <p>2015 &copy; All Rights Reserved. <a href="stoneage-patents.html">Patents</a> | <a href="#">Trademarks</a> | <a href="#">Terms</a>
+        <p>2015 &copy; All Rights Reserved. <a href="../stoneage-patents.html">Patents</a> | <a href="#">Trademarks</a> | <a href="#">Terms</a>
         </p>
       </div>
       <div class="col-md-1">
