--- a/waterblast-automation/striker-remote-shotgunning.html
+++ b/waterblast-automation/striker-remote-shotgunning.html
@@ -411,5 +411,13 @@ mounting flexibility.</p>
   <script src="../assets/plugins/masterslider/masterslider.min.js"></script>
 <script src="../assets/plugins/masterslider/jquery.easing.min.js"></script>
   <script src="../assets/js/master-slider.js"></script>
+
+  <!-- Initialize Master Slider -->
+  <script>
+    jQuery(document).ready(function() {    
+      MasterSliderShowcase2.initMasterSliderShowcase2();
+    });
+  </script>
+
 </body>
 </html>
