--- a/waterblast-automation/autobox-abx-2l.html
+++ b/waterblast-automation/autobox-abx-2l.html
@@ -431,5 +431,13 @@ or plastic to withstand corrosive environments</li>
   <script src="../assets/plugins/masterslider/masterslider.min.js"></script>
 <script src="../assets/plugins/masterslider/jquery.easing.min.js"></script>
   <script src="../assets/js/master-slider.js"></script>
+
+  <!-- Initialize Master Slider -->
+  <script>
+    jQuery(document).ready(function() {    
+      MasterSliderShowcase2.initMasterSliderShowcase2();
+    });
+  </script>
+
 </body>
 </html>
