--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -92,11 +92,31 @@
   <!-- Automated Equip -->
   <section class="header wb-automated">
     <div class="row bg-lt-grey margin-bottom-30">
-      <div class="col-sm-6 col-sm-push-6 heading-img">
-        <img src="assets/img/striker-big.jpg" class="img-responsive" alt="Striker Remote Shotgunning System for Hydroblasting"/>
-      </div>
-      <div class="col-sm-6 col-sm-pull-6 heading">
-        <h1>Automated Waterblast Equipment and Systems</h1>
+      <div class="container">
+        <div class="col-sm-6 col-sm-push-6 heading-img">
+          <!-- Automated Carousel -->
+          <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+              <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+              <li data-target="#myCarousel" data-slide-to="1"></li>
+              <li data-target="#myCarousel" data-slide-to="2"></li>
+              <li data-target="#myCarousel" data-slide-to="3"></li>
+            </ol>
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner" role="listbox">
+              <div class="item active">
+                <img src="assets/img/sliders/landing-sliders/abx-2l-04.jpg" alt="Chania" class="img-responsive">
+              </div>
+              <div class="item">
+                <img src="assets/img/sliders/landing-sliders/abx-500-01.jpg" alt="Chania" class="img-responsive">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-sm-pull-6 heading">
+          <h1>Automated Equipment</h1>
+        </div>
       </div>
     </div>
     
