landing page slider comparison

--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -93,7 +93,7 @@
   <section class="header wb-automated">
     <div class="row bg-lt-grey margin-bottom-30">
       <div class="container">
-        <div class="col-sm-6 col-sm-push-6 heading-img">
+        <div class="col-sm-8 col-sm-push-4 heading-img">
           <!-- Automated Carousel -->
           <div id="myCarousel" class="carousel slide" data-ride="carousel">
             <!-- Indicators -->
@@ -114,8 +114,8 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-6 col-sm-pull-6 heading">
-          <h1>Automated Equipment</h1>
+        <div class="col-sm-4 col-sm-pull-8 heading">
+          <h1>Automated Waterblast Equipment</h1>
         </div>
       </div>
     </div>
