--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -91,31 +91,27 @@
   
   <!-- Automated Equip -->
   <section class="header wb-automated">
-    <div class="row bg-lt-grey margin-bottom-30">
+    <div class="row margin-bottom-30">
       <div class="container">
-        <div class="col-sm-8 col-sm-push-4 heading-img">
           <!-- Automated Carousel -->
-          <div id="myCarousel" class="carousel slide" data-ride="carousel">
-            <!-- Indicators -->
-            <ol class="carousel-indicators">
-              <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-              <li data-target="#myCarousel" data-slide-to="1"></li>
-              <li data-target="#myCarousel" data-slide-to="2"></li>
-              <li data-target="#myCarousel" data-slide-to="3"></li>
-            </ol>
-            <!-- Wrapper for slides -->
-            <div class="carousel-inner" role="listbox">
-              <div class="item active">
-                <img src="assets/img/sliders/landing-sliders/abx-2l-04.jpg" alt="Chania" class="img-responsive">
+          <div class="carousel slide carousel-fade" data-ride="carousel">
+
+              <!-- Wrapper for slides -->
+              <div class="carousel-inner" role="listbox">
+                  <div class="item active">
+                  </div>
+                  <div class="item">
+                  </div>
+                  <div class="item">
+                  </div>
               </div>
-              <div class="item">
-                <img src="assets/img/sliders/landing-sliders/abx-500-01.jpg" alt="Chania" class="img-responsive">
-              </div>
-            </div>
           </div>
-        </div>
-        <div class="col-sm-4 col-sm-pull-8 heading">
-          <h1>Automated Waterblast Equipment</h1>
+
+          <!-- Remeber to put all the content you want on top of the slider below the slider code -->
+
+          <div class="title">
+            <h1>Automated Waterblast Equipment</h1>
+          </div>
         </div>
       </div>
     </div>
@@ -347,6 +343,10 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <script src="assets/js/custom.js"></script>
+      
+  <script>
+      $('.carousel').carousel();
+  </script>
 
 </body>
 </html>
