wb landing small header comparison

--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -90,40 +90,9 @@
   <!-- End Big WB nav -->
   
   <!-- Automated Equip -->
-  <section class="header wb-automated">
-    <div class="row margin-bottom-30">
-      <div class="container">
-<<<<<<< HEAD
-=======
-        <div class="col-sm-6 col-sm-push-6 heading-img">
->>>>>>> parent of bbcce65... landing page slider comparison
-          <!-- Automated Carousel -->
-          <div class="carousel slide carousel-fade" data-ride="carousel">
-
-              <!-- Wrapper for slides -->
-              <div class="carousel-inner" role="listbox">
-                  <div class="item active">
-                  </div>
-                  <div class="item">
-                  </div>
-                  <div class="item">
-                  </div>
-              </div>
-          </div>
-<<<<<<< HEAD
-
-          <!-- Remeber to put all the content you want on top of the slider below the slider code -->
-
-          <div class="title">
-            <h1>Automated Waterblast Equipment</h1>
-          </div>
-=======
-        </div>
-        <div class="col-sm-6 col-sm-pull-6 heading">
-          <h1>Automated Equipment</h1>
->>>>>>> parent of bbcce65... landing page slider comparison
-        </div>
-      </div>
+  <section class="wb-automated">
+    <div class="containter-fluid bg-md-grey header section-header">
+      <h1>Automated Waterblast Equipment</h1>
     </div>
     
     <!-- Automated Product List -->
@@ -133,7 +102,7 @@
         <div class="row">
           <div class="col-sm-4 product-list">
             <div class="list-group">
-              <a href="#" class="list-group-item header">Automated Surface Cleaning</h4>
+              <a href="#" class="list-group-item header">Automated Surface Cleaning</a>
               <a href="waterblast-automation/striker-remote-shotgunning.html" class="list-group-item">Striker<span class="label label-warning">New for 2016</span></a>
               <a href="#" class="list-group-item">Tunnel Cleaner</a>
               <a href="#" class="list-group-item">Conveyor Cleaner</a>
