--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -91,7 +91,7 @@
   
   <!-- Automated Equip -->
   <section class="wb-automated">
-    <div class="containter-fluid bg-md-grey header section-header">
+    <div class="containter-fluid bg-lt-grey header section-header">
       <h1>Automated Waterblast Equipment</h1>
     </div>
     
