--- a/index.html
+++ b/index.html
@@ -73,14 +73,15 @@
   <div class="containter-fluid home-slider">
   <div id="homeSlides" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
-    <form action="#" onsubmit="window.open(whichsite(this), '_self'); return false;">
+    <form action="#" onsubmit="window.open(whichsite(this), '_self'); return false;" class="indicator-panel">
+      <h3>What are you cleaning?</h3>
       <ol class="carousel-indicators">
-        <li data-target="#homeSlides" data-slide-to="0" class="active" id="waterblast-tools-automated-equipment.html"><span>Heat Exchanger</span></li>
-        <li data-target="#homeSlides" data-slide-to="1" id="http://google.com"><span>Pipe Interior</span></li>
-        <li data-target="#homeSlides" data-slide-to="2"><span>Exterior Surface</span></li>
-        <li data-target="#homeSlides" data-slide-to="3"><span>Tank or Vessel</span></li>
-        <li data-target="#homeSlides" data-slide-to="4"><span>Furnace or Boiler</span></li>
-        <li data-target="#homeSlides" data-slide-to="5"><span>Sewer Line</span></li>
+        <li data-target="#homeSlides" data-slide-to="0" class="active" id="waterblast-tools-automated-equipment.html"><span>Heat Exchangers</span></li>
+        <li data-target="#homeSlides" data-slide-to="1" id="http://google.com"><span>Pipe Interiors</span></li>
+        <li data-target="#homeSlides" data-slide-to="2"><span>Exterior Surfaces</span></li>
+        <li data-target="#homeSlides" data-slide-to="3"><span>Tanks or Vessels</span></li>
+        <li data-target="#homeSlides" data-slide-to="4"><span>Furnaces or Boilers</span></li>
+        <li data-target="#homeSlides" data-slide-to="5"><span>Sewer Lines</span></li>
         <li data-target="#homeSlides" data-slide-to="6"><span>Coil Tubing</span></li>
         <li data-target="#homeSlides" data-slide-to="7"><span>Hydro-Excavation</span></li>
         <li class="search-input"><input type="submit" class="btn" value="Search"></li>
@@ -115,7 +116,7 @@
       </div>
     </div>
 
-    <!-- Controls -->
+    <!-- Controls
     <a class="left carousel-control" href="#homeSlides" role="button" data-slide="prev">
       <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
@@ -123,7 +124,7 @@
     <a class="right carousel-control" href="#homeSlides" role="button" data-slide="next">
       <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
-    </a>
+    </a> -->
   </div>
   </div>
   <!-- End Carousel -->
