accodion tabs start

--- a/rotary-waterblast-tools/barracuda-shotgunning.html
+++ b/rotary-waterblast-tools/barracuda-shotgunning.html
@@ -158,7 +158,7 @@
             <div class="panel-heading" role="tab" id="heading40k">
               <h4 class="panel-title">
                 <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                  22k Specifications <span class="glyphicon glyphicon-plus"></span>
+                  22k/1500 bar Specifications <span class="glyphicon glyphicon-plus"></span>
                 </a>
               </h4>
             </div>
@@ -245,7 +245,7 @@
             <div class="panel-heading" role="tab" id="heading40k">
               <h4 class="panel-title">
                 <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse40k" aria-expanded="false" aria-controls="collapse40k">
-                  40k Specifications <span class="glyphicon glyphicon-plus"></span>
+                  40k/2800 bar Specifications <span class="glyphicon glyphicon-plus"></span>
                 </a>
               </h4>
             </div>
