accordion tabs fixes

--- a/rotary-waterblast-tools/banshee-tube-cleaners.html
+++ b/rotary-waterblast-tools/banshee-tube-cleaners.html
@@ -932,12 +932,12 @@
                         <td colspan="2">P1, P2, BSPP2, MP6L, MP6R, MP4L, MP4R</td>
                       </tr>
                       <tr>
-                        <th>Swivel Diameter</th>
+                        <th>Diameter</th>
                         <td>0.7 in.</td>
                         <td><span class="metric">13 mm</span></td>
                       </tr>
                       <tr>
-                        <th>Swivel Length</th>
+                        <th>Length</th>
                         <td>1.5 in.</td>
                         <td><span class="metric">39 mm</span></td>
                       </tr>
