--- a/rotary-waterblast-tools/banshee-tube-cleaners.html
+++ b/rotary-waterblast-tools/banshee-tube-cleaners.html
@@ -167,7 +167,7 @@
                 <ul>
                   <li>Unplugging, cleaning, and polishing tubes, such as those found in heat exchangers and industrial tube bundles</li>
                   <li>Effectively removes thin, hard scale, carbons, coke, and polymers</li>
-                  <li>Ideal for manual and powered lancing operations</li>
+                  <li>Banshee Beetle models are designed to work around tight radiused bends</li>
                 </ul>
               </div>
             </div>
@@ -965,10 +965,10 @@
             <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
               <div class="panel-body">
                 <div class="col-sm-6">
-                  <iframe width="220" height="120" src="https://www.youtube.com/embed/qZog9cnRviw" frameborder="0" allowfullscreen></iframe><p class="caption">Spitfire Overview Video</p>
+                  <iframe width="220" height="120" src="https://www.youtube.com/embed/mSRf2yelD0I" frameborder="0" allowfullscreen></iframe><p class="caption">Banshee Overview Video</p>
                 </div>
                 <div class="col-sm-6">
-                    <iframe width="220" height="120" src="https://www.youtube.com/embed/sFMKz5e7hGo" frameborder="0" allowfullscreen></iframe><p class="caption">Spitfire Maintenance Video</p>
+                    <iframe width="220" height="120" src="https://www.youtube.com/embed/cWRA6gtS2qI" frameborder="0" allowfullscreen></iframe><p class="caption">Banshee Maintenance Video</p>
                 </div>
               </div>
             </div>
@@ -984,7 +984,10 @@
             <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
               <div class="panel-body">
                 <ul>
-                  <li><a href="../assets/pdf/spfr_manual.pdf"><i class="fa fa-file-text-o"></i> &nbsp;Spitfire User Manual</a></li>
+                  <li><a href="../assets/pdf/bn_manual.pdf"><i class="fa fa-file-text-o"></i> &nbsp;22k/1500 bar Banshee Models User Manual</a></li>
+                  <li><a href="../assets/pdf/bn-40k_manual_insert.pdf"><i class="fa fa-file-text-o"></i> &nbsp;40k/2800 bar Banshee Models User Manual</a></li>
+                  <li><a href="../assets/pdf/bn_manual.pdf"><i class="fa fa-file-text-o"></i> &nbsp;Shrouded Banshee (BNS13) User Manual</a></li>
+                  <li><a href="../assets/pdf/bt_manual.pdf"><i class="fa fa-file-text-o"></i> &nbsp;Banshee Beetle Models User Manual</a></li>
                 </ul>
                 <p><strong>Our expert staff is available Monday through Friday 8:AM - 5:PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
                 <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
@@ -1013,8 +1016,8 @@
           <h5>Lightweight Positioner</h5></a>
         </div>
         <div class="col-sm-2 col-centered">
-          <a href="#"><img class="img-responsive" src="../assets/img/thumb/thumb-banshee-01.jpg" alt="Banshee rotary tube cleaners">
-          <h5>Banshee Rotary Tools</h5></a>
+          <a href="../waterblast-automation/autobox-abx-2l.html"><img class="img-responsive" src="../assets/img/product/abx-2l-01.jpg" alt="AutoBox ABX-2L Flex Lancing System">
+          <h5>AutoBox ABX-2L Flex Lancing System</h5></a>
         </div>
       </div>
     </div>
@@ -1026,9 +1029,9 @@
     <div class="container padding-tb-30">
       <div class="col-md-7">
 
-          <h2>Rotary Shotgun Tools for Thick, Heavy Deposits
+          <h2>Rotary Small Tube Cleaning
 </h2>
-          <p>Barracuda tools adapt to any high pressure pump and are excellent for difficult and irregular surfaces.</p>
+          <p>The leading tube lancing nozzles on the market are fast, effective, and simple to operate. Banshee tools are ideal for manual and powered operations.</p>
       </div>
       <div class="col-md-4 col-md-offset-1">
         <table>
@@ -1057,10 +1060,10 @@
         <div class="item active">
           <div class="insight">
             <img src="../assets/img/quote.png" alt="quote" class="quote" />
-            <p>We use equipment in the worst environments that you could possibly put them in… Sometimes I can’t see for the life of me how they hold up under these conditions, but they do.</p>
-            <p class="signed">-Mike House</p>
+            <p>Lines we've only been able to poke holes in are draining like no one has seen in over 20 years.</p>
+            <p class="signed">-Dean Tramontana,<br/>La Place Equipment Co.</p>
           </div>
-          <img src="../assets/img/sliders/spitfire-demo.jpg" alt="Spirfire rotary shotgunning">
+          <img src="../assets/img/sliders/beetle-u-tube.jpg" alt="Banshee Beetle for u-tube exchangers">
         </div>
 
         <div class="item">
@@ -1071,7 +1074,7 @@
             <p class="signed">- Mark Blanchard,<br/>Water Works Industrial Services</p>
           </div>
 -->
-          <img src="../assets/img/sliders/spitfire-demo.jpg" alt="Spirfire rotary shotgunning">
+          <img src="../assets/img/sliders/bn_pressure_01.jpg" alt="Banshee tube cleaners">
         </div>
 
       </div><!-- End wrapper -->
