--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -223,7 +223,7 @@
           <div class="col-sm-4 product-list">
             <div class="list-group">
               <a href="#" class="list-group-item header">Exchanger Cleaning</h4>
-              <a href="#" class="list-group-item">Banshee/Beetle<span class="label label-danger">Best Selling</span></a>
+              <a href="rotary-waterblast-tools/banshee-tube-cleaners.html" class="list-group-item">Banshee/Beetle<span class="label label-danger">Best Selling</span></a>
             </div>
           </div>
           <div class="col-sm-4 product-list">
