backout,centralizers,dealers

--- a/rotary-waterblast-tools/badger-6in-pipe-cleaning.html
+++ b/rotary-waterblast-tools/badger-6in-pipe-cleaning.html
@@ -143,6 +143,7 @@
                   <li>Speed controlled rotary tools provide complete internal coverage with optimum jet delivery</li>
                   <li>Maximize cleaning by choosing slower speeds for hard to clean or plugged pipes, and faster speeds for polishing easy to clean pipes with a single tool</li>
                   <li>Optimize the tool for a variety of pumps pressures and flows with multiple jetting options</li>
+                  <li>Centralizer options for larger pipe sizes available</li>
                 </ul>
               </div>
             </div>
