--- a/rotary-waterblast-tools/rotary-swivels.html
+++ b/rotary-waterblast-tools/rotary-swivels.html
@@ -135,7 +135,7 @@
         <div class="clearfix"></div>
         </div>
 
-        <p class="product-description">Stainless steel construction, heavy duty bearings, and long lasting high pressure seals. 0&deg; or 90&deg; inlet connections are available.</p>
+        <p class="product-description">Rotary swivels provide rotary motion for a variety of applications. Stainless steel construction, heavy duty bearings, and long lasting high pressure seals. 0&deg; or 90&deg; inlet connections are available.</p>
 
         <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
           <div class="panel panel-default">
@@ -984,11 +984,26 @@
             </div>
             <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
               <div class="panel-body">
-                <div class="col-sm-6">
-                  <iframe width="220" height="120" src="https://www.youtube.com/embed/mSRf2yelD0I" frameborder="0" allowfullscreen></iframe><p class="caption">Banshee Overview Video</p>
+                <div class="row">
+                  <div class="col-sm-6">
+                      <iframe width="220" height="120" src="https://www.youtube.com/embed/t610YycBEzk" frameborder="0" allowfullscreen></iframe><p class="caption">SG Swivel Tool Maintenance</p>
+                  </div>
+                  <div class="col-sm-6">
+                    <iframe width="220" height="120" src="https://www.youtube.com/embed/jH7X4N0nlHU" frameborder="0" allowfullscreen></iframe><p class="caption">SH Swivel Tool Maintenance</p>
+                  </div>
                 </div>
-                <div class="col-sm-6">
-                    <iframe width="220" height="120" src="https://www.youtube.com/embed/cWRA6gtS2qI" frameborder="0" allowfullscreen></iframe><p class="caption">Banshee Maintenance Video</p>
+                <div class="row">
+                  <div class="col-sm-6">
+                      <iframe width="220" height="120" src="https://www.youtube.com/embed/7D2kmuIE1LU" frameborder="0" allowfullscreen></iframe><p class="caption">SL Swivel Tool Maintenance</p>
+                  </div>
+                  <div class="col-sm-6">
+                      <iframe width="220" height="120" src="https://www.youtube.com/embed/FTeGGPUAHpA" frameborder="0" allowfullscreen></iframe><p class="caption">SM Swivel Tool Maintenance</p>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-sm-6">
+                    <iframe width="220" height="120" src="https://www.youtube.com/embed/RFISOyoEoug" frameborder="0" allowfullscreen></iframe><p class="caption">UH Swivel Tool Maintenance</p>
+                  </div>
                 </div>
               </div>
             </div>
@@ -1004,10 +1019,12 @@
             <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
               <div class="panel-body">
                 <ul>
-                  <li><a href="../assets/pdf/bn_manual.pdf"><i class="fa fa-file-text-o"></i> &nbsp;22k/1500 bar Banshee Models User Manual</a></li>
-                  <li><a href="../assets/pdf/bn-40k_manual_insert.pdf"><i class="fa fa-file-text-o"></i> &nbsp;40k/2800 bar Banshee Models User Manual</a></li>
-                  <li><a href="../assets/pdf/bn_manual.pdf"><i class="fa fa-file-text-o"></i> &nbsp;Shrouded Banshee (BNS13) User Manual</a></li>
-                  <li><a href="../assets/pdf/bt_manual.pdf"><i class="fa fa-file-text-o"></i> &nbsp;Banshee Beetle Models User Manual</a></li>
+                  <li><a href="../assets/pdf/manuals/SG_Manual_Insert.pdf"><i class="fa fa-file-text-o"></i> &nbsp;SG Swivel User Manual</a></li>
+                  <li><a href="../assets/pdf/manuals/SG-CCN_Manual_Insert.pdf"><i class="fa fa-file-text-o"></i> &nbsp;SG-CCN Swivel User Manual</a></li>
+                  <li><a href="../assets/pdf/manuals/SH_Manual_Insert.pdf"><i class="fa fa-file-text-o"></i> &nbsp;SH Swivel User Manual</a></li>
+                  <li><a href="../assets/pdf/manuals/SL_Manual_Insert.pdf"><i class="fa fa-file-text-o"></i> &nbsp;SL Swivel User Manual</a></li>
+                  <li><a href="../assets/pdf/manuals/SM_Manual_Insert.pdf"><i class="fa fa-file-text-o"></i> &nbsp;SM Swivel User Manual</a></li>
+                  <li><a href="../assets/pdf/manuals/UH_Manual_Insert.pdf"><i class="fa fa-file-text-o"></i> &nbsp;UH Swivel User Manual</a></li>
                 </ul>
                 <p><strong>Our expert staff is available Monday through Friday 8:AM - 5:PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
                 <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
@@ -1049,9 +1066,8 @@
     <div class="container padding-tb-30">
       <div class="col-md-7">
 
-          <h2>Rotary Small Tube Cleaning
-</h2>
-          <p>The leading tube lancing nozzles on the market are fast, effective, and simple to operate. Banshee tools are ideal for manual and powered operations.</p>
+          <h2>The industry's widest selection of rotary swivels</h2>
+          <p>Rotary swivels provide rotary motion for a variety of applications. They can be installed between a tool’s inlet connection and the high pressure hose to prevent hose twist and ease hose handling.</p>
       </div>
       <div class="col-md-4 col-md-offset-1">
         <table>
@@ -1078,12 +1094,14 @@
       <!-- Wrapper for slides -->
       <div class="carousel-inner" role="listbox">
         <div class="item active">
+<!--
           <div class="insight">
             <img src="../assets/img/quote.png" alt="quote" class="quote" />
             <p>Lines we've only been able to poke holes in are draining like no one has seen in over 20 years.</p>
             <p class="signed">-Dean Tramontana,<br/>La Place Equipment Co.</p>
           </div>
-          <img src="../assets/img/sliders/beetle-u-tube.jpg" alt="Banshee Beetle for u-tube exchangers">
+-->
+          <img src="../assets/img/sliders/sg40_swivel.jpg" alt="SG swivels for high pressure surface cleaning">
         </div>
 
         <div class="item">
@@ -1094,7 +1112,7 @@
             <p class="signed">- Mark Blanchard,<br/>Water Works Industrial Services</p>
           </div>
 -->
-          <img src="../assets/img/sliders/bn_pressure_01.jpg" alt="Banshee tube cleaners">
+          <img src="../assets/img/sliders/uh40_swivel.jpg" alt="UH swivels for high pressure surface cleaning">
         </div>
 
       </div><!-- End wrapper -->
